packages/react-server/examples/basic/src/routes/test/error/use-client/page.tsx
export default function Page() {
  return <button onClick={() => {}}>Boom!</button>;
}
